--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ sudo: required
 services:
   - docker
 
+install:
+  - pip install pytest
+
 script:
   - ./tests/scalabilityB.sh
   - ./tests/scalabilityI.sh
