travis for deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
-language: python
-python:
-  - "2.7"
 
-env:
-  - ANSIBLE_HOST_KEY_CHECKING=False
-
-script:
-  - echo "Run test scripts here"
-
-before_deploy:
-  - pip install ansible shade
-
-deploy:
-  - provider: script
-    script: "ansible-playbook .playbook.yml"
-    on:
-      branch: master
+### DEPLOY ON OPENSTACK
+# language: python
+# python:
+#   - "2.7"
+#
+# env:
+#   - ANSIBLE_HOST_KEY_CHECKING=False
+#
+# script:
+#   - echo "Run test scripts here"
+#
+# before_deploy:
+#   - pip install ansible shade
+#
+# deploy:
+#   - provider: script
+#     script: "ansible-playbook .playbook.yml"
+#     on:
+#       branch: master
