Add the docker-compose before scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ services:
 install:
   - pip install pytest
 
+before-script:
+  - docker-compose up
+
 script:
   - ./tests/scalabilityB.sh
   - ./tests/scalabilityI.sh
