Containers in background

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install pytest
 
 before_script:
-  - docker-compose up
+  - docker-compose up -d
 
 script:
   - ./tests/scalabilityB.sh
