scale in compose file and test more request

--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -78,6 +78,8 @@ services:
             cnalan:
               aliases:
                 - w
+        deploy:
+          replicas: 5
     w1:
         image: ##REGISTRY##/cloudnativeapp_w1
         links:
