--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ script:
   - ./tests/scalabilityPlay.sh
   - pytest
 
+after_script:
+  - ./docker_services_rm.sh
+
 after_failure:
   - docker service logs cna_web
   - docker service logs cna_b
