Add deployment feature

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ deploy:
 - provider: script
   script: ansible-playbook .playbook.yml
   on:
-    branch: master
+    branch: release
 
 addons:
   ssh_known_hosts:
