--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_d0cfa861f601_key -iv $encrypted_d0cfa861f601_iv -in bastion.pem.enc -out bastion.pem -d
 - chmod 600 bastion.pem
 
+install: "pip install -r requirements.txt --use-mirrors"
+
 before_deploy:
 - apt-get update -y
 - pip install ansible shade
