--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - sudo apt-get -qq update
 - sudo apt-get install -y openvpn
 
-install: "pip install -r requirements.txt --use-mirrors"
+install: "pip install -r requirements.txt"
 
 before_deploy:
 - pip install ansible shade
