--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_d0cfa861f601_key -iv $encrypted_d0cfa861f601_iv -in bastion.pem.enc -out bastion.pem -d
+- openssl aes-256-cbc -K $encrypted_d0cfa861f601_key -iv $encrypted_d0cfa861f601_iv -in lab2017.key.enc -out lab2017.key -d
 - chmod 600 bastion.pem
 - sudo apt-get -qq update
 - sudo apt-get install -y openvpn
