--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ script:
 - echo "Run test scripts here"
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_d0cfa861f601_key -iv $encrypted_d0cfa861f601_iv -in lab2017.key.enc -out lab2017.key -d
-- openssl aes-256-cbc -K $encrypted_d0cfa861f601_key -iv $encrypted_d0cfa861f601_iv -in bastion.pem.enc -out bastion.pem -d
+- openssl aes-256-cbc -K $encrypted_d0cfa861f601_key -iv $encrypted_d0cfa861f601_iv -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
 - chmod 600 bastion.pem
 - sudo apt-get -qq update
 - sudo apt-get install -y openvpn
 
-install: "pip install -r test-requirements.txt"
+install: "pip install -r tgest-requirements.txt"
 
 before_deploy:
 - pip install ansible shade
