--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 - sudo apt-get -qq update
 - sudo apt-get install -y openvpn
 
-install: "pip install -r tgest-requirements.txt"
+install: "pip install -r test-requirements.txt"
 
 before_deploy:
 - pip install ansible shade
